--- a/src/routes/Docs/components/Sidebar/Sidebar.scss
+++ b/src/routes/Docs/components/Sidebar/Sidebar.scss
@@ -27,7 +27,17 @@ $border-color: #d9e6f1;
     position: sticky;
     top: 0;
 
+    &.scrolling > .scrollbar-track .scrollbar-thumb-inner,
+    .scrollbar-track:hover .scrollbar-thumb-inner {
+      opacity: 0.8;
+    }
+
+    .vertical-scrollbar-track {
+      right: -12px;
+    }
+
     .scrollbar-thumb-inner {
+      opacity: 0;
       background-image: linear-gradient(adjust-hue($color-pink, -25), $color-pink);
     }
 
