--- a/src/routes/Examples/components/Sidebar/Sidebar.scss
+++ b/src/routes/Examples/components/Sidebar/Sidebar.scss
@@ -13,7 +13,13 @@
   .scrollbar {
     overflow: hidden;
 
+    &.scrolling > .scrollbar-track .scrollbar-thumb-inner,
+    .scrollbar-track:hover .scrollbar-thumb-inner {
+      opacity: 0.8;
+    }
+
     .scrollbar-thumb-inner {
+      opacity: 0;
       background-image: linear-gradient(adjust-hue($color-pink, -25), $color-pink);
     }
   }
